centering issue on mobile fixed

--- a/style2.css
+++ b/style2.css
@@ -9,15 +9,15 @@ body {
 }
 header, nav {
     display: grid;
-    margin: auto;
     justify-content: space-around;
     align-items: center;
 }
 h1,
 h2,
 header {
-    margin:auto;
-    padding:10px;
+    margin: auto;
+    padding: 10px;
+    text-align: center;
 }
 nav {
     grid-template-columns: 15%;
